# LR-splitpipe

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: ci-test.yml
LR_splitpipe/: add_bam_tag.py  demultiplex.py  utils.py
LRsplitpipe/: demultiplex.py  utils.py
testing/: fq1.fastq  test_demultiplex.py  test_utils.py
