[metadata]
name = LR-splitpipe
description = LR-splitpipe is a pipeline designed for demultiplexing, debarcoding, and preparing LR-Split-seq data.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
author = Fairlie Reese
author_email = freese@uci.edu
project_urls =
   Source = https://github.com/fairliereese/LR-splitpipe
   Tracker = https://github.com/fairliereese/LR-splitpipe

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
include_package_data = True
install_requires =
 Bio
 matplotlib
 numpy
 pandarallel
 pandas
 seaborn

[options.entry_points]
console_scripts =
    lr-splitpipe = LR_splitpipe.demultiplex:main

[options.extras_require]
test =
    pytest
    pytest-cov

[options.package_data]
* = LRsplitpipe/barcodes/*